implememnted soft activatable